location 변수명 수정 , main

--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
               </div>
               <div class="text_box">
                 <h2>Men's new arrivals</h2>
-                <p>The title says it all, you're looking at what's new! Constantly evolving, "New Arrivals" brings you all the latest releases from Nudie Jeans.</p>
+                <p>The title says it all, you're looking at what's new! Constantly evolving, "New Arrivals" brings you
+                  all the latest releases from Nudie Jeans.</p>
                 <span>become a c/o Nudie Jeans member!</span>
               </div>
             </a>
@@ -133,7 +134,9 @@
               </div>
               <div class="text_box">
                 <h2>Women's new arrivals</h2>
-                <p>Our latest collection from Nudie Jeans Women is more of the things we love! So, if you’re like us and just can’t get enough of beautiful denim washes, workwear that ages with grace and comfy tees, then you’re in for a treat.</p>
+                <p>Our latest collection from Nudie Jeans Women is more of the things we love! So, if you’re like us and
+                  just can’t get enough of beautiful denim washes, workwear that ages with grace and comfy tees, then
+                  you’re in for a treat.</p>
                 <span>become a c/o Nudie Jeans member!</span>
               </div>
             </a>
@@ -146,7 +149,9 @@
               </div>
               <div class="text_box">
                 <h2>Rebirth</h2>
-                <p>We make all garments in our Rebirth collection with at least 70% recycled fibers– because why throw away or waste material we can turn into new products? Over the years, we've launched a few bits and pieces and called it Rebirth, but starting today, Rebirth is a recurring concept.</p>
+                <p>We make all garments in our Rebirth collection with at least 70% recycled fibers– because why throw
+                  away or waste material we can turn into new products? Over the years, we've launched a few bits and
+                  pieces and called it Rebirth, but starting today, Rebirth is a recurring concept.</p>
                 <span>become a c/o Nudie Jeans member!</span>
               </div>
             </a>
@@ -225,17 +230,22 @@
               <ul class="swiper-wrapper">
                 <li class="swiper-slide">
                   <h3>Sustainability Report</h3>
-                  <p>For our daily business and sustainability work, we have several policies that serve as a framework and guidance.
+                  <p>For our daily business and sustainability work, we have several policies that serve as a framework
+                    and guidance.
                   </p>
                 </li>
                 <li class="swiper-slide">
                   <h3>Social Report</h3>
-                  <p>As a member of FWF we annually report on our performance. In the social report we summarize the previous year and the activities at supplier level. We are transparent about the findings at the social audits and the complaints received at our suppliers.
+                  <p>As a member of FWF we annually report on our performance. In the social report we summarize the
+                    previous year and the activities at supplier level. We are transparent about the findings at the
+                    social audits and the complaints received at our suppliers.
                   </p>
                 </li>
                 <li class="swiper-slide">
                   <h3>Material Tool</h3>
-                  <p>The Nudie Jeans Material Tool aims to guide our designers and product developers. The Nudie Jeans Material Tool is based on Made-By’s Environmental Benchmark for Fibers and the Higg Materials Sustainability Index (MSI).
+                  <p>The Nudie Jeans Material Tool aims to guide our designers and product developers. The Nudie Jeans
+                    Material Tool is based on Made-By’s Environmental Benchmark for Fibers and the Higg Materials
+                    Sustainability Index (MSI).
                   </p>
                 </li>
               </ul>
@@ -368,7 +378,9 @@
         <h2>Bake Your Own</h2>
         <div class="left">
           <h3>Denim is always an option,</h3>
-          <p>Later this fall, we introduce a new fit called Rad Rufus. As an exclusive preview, we opened a pop-up pizzeria and invited ten stores worldwide to bake their own. We supplied each store with a menu of premium ingredients, and let them get creative with it.</p>
+          <p>Later this fall, we introduce a new fit called Rad Rufus. As an exclusive preview, we opened a pop-up
+            pizzeria and invited ten stores worldwide to bake their own. We supplied each store with a menu of premium
+            ingredients, and let them get creative with it.</p>
           <ul>
             <li><i class=" far fas fa-check-circle"></i> THE DENIM STORE</li>
             <li><i class=" far fas fa-check-circle"></i> PEGGS SON</li>
@@ -380,7 +392,7 @@
         <!-- left -->
         <div class="right">
           <h3>Bake Media</h3>
-         <video src="./video/bake.mp4" muted controls></video>
+          <video src="./video/bake.mp4" muted controls></video>
           <p>Ten stores, ten unique versions of Rad Rufus, limited to 25 pieces per store.</p>
         </div>
         <!--// right  -->
@@ -431,7 +443,9 @@
           <div class="mask02"></div>
           <div class="text_box">
             <h3>Free repairs forever</h3>
-            <p>Our jeans are meant to be worn a lot. We use only high quality fabrics and the sewing is top class. But at the same time, denim is not armor. The more you wear your jeans, the closer they get to that rainy day when a rip occurs. </p>
+            <p>Our jeans are meant to be worn a lot. We use only high quality fabrics and the sewing is top class. But
+              at the same time, denim is not armor. The more you wear your jeans, the closer they get to that rainy day
+              when a rip occurs. </p>
             <a href="#none" class="repair_open">view more</a>
           </div>
         </div>
@@ -483,12 +497,15 @@
             <ul class="swiper-wrapper">
               <li class="swiper-slide">
                 <h3>WEEVER ISLAND.</h3>
-                <p>LIsland life is whatever you make of it: a place for recreation or adventure. Pitch your tent wherever you please, accidentally spot a UFO when you’re out birding, hit the beach to catch up on your reading, or why not go for a swim.
+                <p>LIsland life is whatever you make of it: a place for recreation or adventure. Pitch your tent
+                  wherever you please, accidentally spot a UFO when you’re out birding, hit the beach to catch up on
+                  your reading, or why not go for a swim.
                 </p>
               </li>
               <li class="swiper-slide">
                 <h3>THE VOYAGER</h3>
-                <p>No one is an island entirely on their own. But sometimes, we need to disconnect, venture out into uncharted waters and seek adventure where it presents itself.
+                <p>No one is an island entirely on their own. But sometimes, we need to disconnect, venture out into
+                  uncharted waters and seek adventure where it presents itself.
                 </p>
               </li>
             </ul>
@@ -646,27 +663,32 @@
     <div class="top"></div>
     <div class="inner">
       <div>
-      <div class="pic">
-      <img src="img/main/repair_pop.jpg" >
-      <div class="cont">
-        <h2>Repair Shops</h2>
-        <p>We don’t call our stores ‘Repair Shops’ for nothing. Just as important as selling jeans it is for us to repair what we once sold. Wash your jeans and hand them in at your closest Nudie Jeans Repair Shop. When they’re done you have a new version of your old favourite. Making your mark on your things adds value to them and make them worth caring for.</p>
+        <div class="pic">
+          <img src="img/main/repair_pop.jpg">
+          <div class="cont">
+            <h2>Repair Shops</h2>
+            <p>We don’t call our stores ‘Repair Shops’ for nothing. Just as important as selling jeans it is for us to
+              repair what we once sold. Wash your jeans and hand them in at your closest Nudie Jeans Repair Shop. When
+              they’re done you have a new version of your old favourite. Making your mark on your things adds value to
+              them and make them worth caring for.</p>
+          </div>
+        </div>
       </div>
-    </div>
-    </div>
-    <div>
-      <div class="pic">
-      <img src="img/main/repair_pop02.jpg" >
-      <div class="cont">
-        <h2>Repair Partners</h2>
-        <p>If you feel the moon is closer than any of our Repair Shops, you can look for our Repair Partners. They’re fully equipped and handle your repairs as if you had left your jeans at our shop. Of course they do it for free as well.</p>
+      <div>
+        <div class="pic">
+          <img src="img/main/repair_pop02.jpg">
+          <div class="cont">
+            <h2>Repair Partners</h2>
+            <p>If you feel the moon is closer than any of our Repair Shops, you can look for our Repair Partners.
+              They’re fully equipped and handle your repairs as if you had left your jeans at our shop. Of course they
+              do it for free as well.</p>
+          </div>
+        </div>
       </div>
+      <a href="#" class="repair_close">close</a>
+
     </div>
-    </div>
-    <a href="#" class="repair_close">close</a>
-   
-    </div>
-    
+
   </div>
 
 
