--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
   <script src="js/anime.js"></script>
   <script src="js/main.js" defer></script>
-
 </head>
 
 <body>
@@ -43,8 +42,8 @@
           <li><a href="location.html">LOCATION</a></li>
         </ul>
         <ul class="util">
-          <li><a href="#">Contact</a></li>
           <li><a href="join.html">Join</a></li>
+          <li><a href="#">Sitemap</a></li>
         </ul>
       </nav>
       <a href="#" class="btnCall">
@@ -113,7 +112,7 @@
         <h2>New Arrivals</h2>
         <ul>
           <li>
-            <a href="#">
+            <a href="#none">
               <div class="pic">
                 <img src="./img/main/new01.jpg" alt="men arrivals image">
                 <i class="mask_bg"></i>
@@ -127,7 +126,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#none">
               <div class="pic">
                 <img src="./img/main/new02.jpg" alt="">
                 <i class="mask_bg"></i>
@@ -142,7 +141,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#none">
               <div class="pic">
                 <img src="./img/main/new03.jpg" alt="">
                 <i class="mask_bg"></i>
@@ -454,28 +453,28 @@
           <h3>Recent Posts</h3>
           <ul>
             <li>
-              <a href="#none">
+              <div>
                 <div class="pic">
                   <img src="./img/main/repair_list01.jpg" alt="">
                 </div>
                 <p>Recycling cotton fibers is one way</p>
-              </a>
+              </div>
             </li>
             <li>
-              <a href="#none">
+              <div>
                 <div class="pic">
                   <img src="./img/main/repair_list02.jpg" alt="">
                 </div>
                 <p>Find your closest Repair Shop</p>
-              </a>
+              </div>
             </li>
             <li>
-              <a href="#none">
+              <div>
                 <div class="pic">
                   <img src="./img/main/repair_list03.jpg" alt="">
                 </div>
                 <p>Repair Partners.</p>
-              </a>
+              </div>
             </li>
           </ul>
         </div>
