--- a/media.html
+++ b/media.html
@@ -6,8 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Media</title>
-  <script src="https://kit.fontawesome.com/16312fa746.js" crossorigin="anonymous"></script>
+  <!-- css -->
   <link rel="stylesheet" href="css/style.css">
+  <!-- js -->
+  <script src="https://kit.fontawesome.com/72031614b9.js" crossorigin="anonymous"></script>
   <script src="js/sub.js" defer></script>
   <script src="js/media.js" defer></script>
 </head>
